@@ -22,6 +22,8 @@
      <exports symbol='FAMConnection' type='struct'/>
      <exports symbol='FAMEvent' type='struct'/>
      <exports symbol='FAMRequest' type='struct'/>
+     <exports symbol='FAMErrno' type='variable'/>
+     <exports symbol='FamErrlist' type='variable'/>
      <exports symbol='FAMCancelMonitor' type='function'/>
      <exports symbol='FAMMonitorCollection' type='function'/>
      <exports symbol='FAMSuspendMonitor' type='function'/>
@@ -130,8 +132,10 @@
     </struct>
     <typedef name='GAMReqDataPtr' file='gam_data' type='GAMReqData *'/>
     <typedef name='GAMReqType' file='gam_protocol' type='enum'/>
+    <variable name='FAMErrno' file='fam' type='int'/>
+    <variable name='FamErrlist' file='fam' type='const char *FamErrlist[]'/>
     <function name='FAMCancelMonitor' file='fam'>
-      <info>This function is used to permanently stop a monitoring request. the routine will free the FAMRequest structure provided.</info>
+      <info>This function is used to permanently stop a monitoring request.</info>
       <return type='int' info='0 in case of success and -1 in case of error.'/>
       <arg name='fc' type='FAMConnection *' info='pointer to a connection structure.'/>
       <arg name='fr' type='FAMRequest *' info='pointer to a request structure.'/>
@@ -204,16 +208,16 @@
       <arg name='fc' type='FAMConnection *' info='pointer to a connection structure.'/>
     </function>
     <function name='FAMResumeMonitor' file='fam'>
-      <info></info>
-      <return type='int' info=''/>
-      <arg name='fc' type='FAMConnection *' info=''/>
-      <arg name='fr' type='const FAMRequest *' info=''/>
+      <info>Unsupported call from the FAM API</info>
+      <return type='int' info='0 in case of success and -1 in case of error.'/>
+      <arg name='fc' type='FAMConnection *' info='pointer to a connection structure.'/>
+      <arg name='fr' type='const FAMRequest *' info='pointer to a request structure.'/>
     </function>
     <function name='FAMSuspendMonitor' file='fam'>
-      <info></info>
-      <return type='int' info=''/>
-      <arg name='fc' type='FAMConnection *' info=''/>
-      <arg name='fr' type='const FAMRequest *' info=''/>
+      <info>Unsupported call from the FAM API</info>
+      <return type='int' info='0 in case of success and -1 in case of error.'/>
+      <arg name='fc' type='FAMConnection *' info='pointer to a connection structure.'/>
+      <arg name='fr' type='const FAMRequest *' info='pointer to a request structure.'/>
     </function>
     <function name='gamin_data_conn_data' file='gam_data'>
       <info>Received some incoming data, check if there is complete incoming event(s) and process it (them), otherwise make some sanity check and keep the incomplete event in the structure, waiting for more.</info>
